# circuit-template

./: .gitignore  Circuit.sym  README.md  appTransaction.sym  buildCircuit.sh  buildMerkle.sh  buildMultiplier.sh  circuit.r1cs.json  list.sh  package-lock.json  package.json  pnpm-lock.yaml  shot.sym  tsconfig.json  verification_key.json
.cargo/: config.toml
circuit/: Circuit.circom  Multiplier.circom  Nand.circom  circuit.circom  example.circom  multiplier.circom  nand.circom
circuits/merkle/: MerkleTreeProof.circom  example.circom  merkle128.circom  merkle22.circom  merkle30.circom  merkle40.circom  merkleProof.circom
circuits/multiplier/: circuit.circom
src/: dga.ts  errors.ts  parse_verifyingkey.js  prover.ts  try.ts  types.ts
src/trials/: idl.ts  new.ts  prover_old.ts  rustParser.ts  try.ts  types.ts
test/: prepare.test.ts  prover.test.ts  test.ts
test-cases/circuit_example/: buildCircuit.sh
test-cases/circuit_example/circuit/: Circuit.circom  circuit.circom
test-cases/light-protocol/: buildMockVerifier.sh
test-cases/light-protocol/mockVerifierCircuit/: app_transaction.circom  keypair.circom  merkleProof.circom
tests/: merkleTree.ts  merkleTreeCircomPoseidon.ts  test.ts
tests-rs/: Cargo.toml
tests-rs/benches/: merkle_proof_bench.rs
tests-rs/src/: lib.rs
tests-rs/tests/merkle22/: main.rs
