[package]
name = "tests-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

ark-zkey = { path = "../../mopro/ark-zkey" }
witness = { path = "../../circom-witness-rs" }
once_cell = "1.8"

light-merkle-tree-reference =  { path = "../.../../../light-protocol/merkle-tree/reference"}
light-hasher = { path = "../../light-protocol/merkle-tree/hasher" }

ark-circom = { path = "../../circom-compat", default-features = false, features = ["circom-2"] }
ark-bn254 = { version = "=0.4.0" }
ark-std = { version = "=0.4.0", default-features = false, features = ["parallel"] }
ark-groth16 = { version = "=0.4.0", default-features = false, features = ["parallel"] }
ark-crypto-primitives = { version = "=0.4.0" }
num-bigint = "=0.4.4"
tempfile = "3.10.0"
solana-program = "^1.17"

# error handling
thiserror = "1.0"
color-eyre = "=0.6.2"

hex = "0.4.3"
hex-literal = "0.4.1"

zeroize = "=1.3.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "merkle_proof_bench"
harness = false
#
#[patch.crates-io]
#zeroize = "=1.3.0"